--- a/config.yml
+++ b/config.yml
@@ -64,9 +64,14 @@ pipeline:
    model_confidence: softmax
 
 policies:
- - name: MemoizationPolicy
- - name: TEDPolicy
-   max_history: 5
-   epochs: 50
-   constrain_similarities: true
- - name: RulePolicy
+#  - name: MemoizationPolicy
+#  - name: TEDPolicy
+#    max_history: 5
+#    epochs: 50
+#    constrain_similarities: true
+  - name: RulePolicy
+    core_fallback_threshold: 0.3
+    core_fallback_action_name: action_default_fallback
+    enable_fallback_prediction: true
+    restrict_rules: true
+    check_for_contradictions: true
